--- a/developers.html
+++ b/developers.html
@@ -12,6 +12,11 @@
 
 <p>This page represents Developers.</p>
 <p><strong>Browse Developers</strong></p>
+
+<div class="topnav">
+  <input type="text" placeholder="Search Devs by Name">
+</div>
+
 <table border="1" cellpadding="5">
   <tr>
     <th><a href="#">New</a></th>
