--- a/genres.html
+++ b/genres.html
@@ -12,6 +12,9 @@
 
 <p>This page represents Genres.</p>
 <p><strong>Browse Genres</strong></p>
+<div class="topnav">
+  <input type="text" placeholder="Search Genres by Name">
+</div>
 <table border="1" cellpadding="5">
   <tr>
     <th><a href="#">New</a></th>
