--- a/customers.html
+++ b/customers.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Customers</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
+<link href="style.css" rel="stylesheet" type="text/css"/>
 <script language="JavaScript">
 		function showform(dowhat) {
 			/*
@@ -50,7 +50,7 @@
 <body onload="browseCustomer()">
 <h1>Customer</h1>
 
-[ <a href="customers.html">Customer</a> | <a href="games.html">Games</a> | <a href="developers.html"> Developers </a>| <a href="purchases.html">Purchases</a> | <a href="genres.html"> Genres</a> ]
+[ <a href="index.html">Home</a> | <a href="#">Customer</a> | <a href="games.html">Games</a> | <a href="developers.html"> Developers </a>| <a href="purchases.html">Purchases</a> | <a href="genres.html"> Genres</a> ]
 
 <p>This page represents Customers.</p>
 <div id="browse">
