--- a/genres.html
+++ b/genres.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Genres</h1>
 
-[ <a href="customers.html">Customer</a> | <a href="games.html">Games</a> | <a href="developers.html"> Developers </a>| <a href="purchases.html">Purchases</a> | <a href="genres.html"> Genres</a> ]
+[ <a href="index.html">Home</a> | <a href="customers.html">Customer</a> | <a href="games.html">Games</a> | <a href="developers.html"> Developers </a>| <a href="purchases.html">Purchases</a> | <a href="#"> Genres</a> ]
 <div id="browse" style="display: block">
 
 <p>This page represents Genres.</p>
