--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <html>
 
 <head>
-    <title>Index of Pages</title>
+    <title>Home Page</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-    <H1> Ranger Games Page Index </H1>
+    <H1> Ranger Games Home Page </H1>
     <hr><br>
-    <h2>
-        <a href="customers.html">customers.html</a> <br>
-        <a href="games.html">games.html</a> <br>
-        <a href="developers.html">developers.html </a><br>
-        <a href="purchases.html">purchases.html</a><br>
-        <a href="genres.html">genres.html</a> <br>
-    </h2>
+
+    [ <a href="#">Home</a> | <a href="customers.html">Customer</a> | <a href="games.html">Games</a> | <a href="developers.html"> Developers </a>| <a href="purchases.html">Purchases</a> | <a href="genres.html"> Genres</a> ]
+    <p>This is the home page, click on a link at the top to see the corresponding pages.
+    <br></br>
+    Please note that the Genres_Games_Details table is on the Games page. The Games_Purchases_Details is on the Purchases page.
+    </p>
+    
 </body>
 
 </html>
