--- a/games.html
+++ b/games.html
@@ -224,10 +224,9 @@
                 <option value="4">MovieBrand Games</option>
                 <option value="5">Spooks Unending</option>
                 </select>
+          <fieldset>
           <fieldset class="fields">
-            <fieldset>
-            <legend>Choose the Genre(s):</legend>
-                      
+            <legend>Choose the Genre(s):</legend>          
             <div>
               <input type="checkbox" id="sports" name="sports">
               <label for="sports">Sports</label>
@@ -249,8 +248,10 @@
               <label for="story">Story</label>
               </div>
         </fieldset>
-          <input class="btn" type="submit" id="addGame" value="Add a Game">
-          <input class="btn" type="button" value="Cancel">
+      </fieldset>
+    </fieldset>
+    <input class="btn" type="submit" id="addGame" value="Add a Game">
+    <input class="btn" type="button" value="Cancel">
 	</form> <!--add new Game-->
 </div><!-- insert -->
 
